menambahkan paragraf baru

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
 <body>
     <h1>uji coba git remote</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus iste consequuntur animi exercitationem
+        voluptas illo velit obcaecati magnam sequi, ipsam odit, unde nisi sit! Rem error recusandae enim ipsam eligendi?
+    </p>
 </body>
 
 </html>
